--- a/Pipfile
+++ b/Pipfile
@@ -1,14 +1,23 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
 
 [packages]
 asgiref = "==3.8.1"
-django = "*"
+certifi = "==2024.8.30"
+distlib = "==0.3.8"
+Django = "==5.1.1"
+django-cors-headers = "==4.4.0"
 djangorestframework = "==3.15.2"
+filelock = "==3.16.1"
+packaging = "==24.1"
+pipenv = "==2024.0.3"
+platformdirs = "==4.3.6"
 psycopg2-binary = "==2.9.9"
+setuptools = "==75.1.0"
 sqlparse = "==0.5.1"
+virtualenv = "==20.26.5"
 
 [dev-packages]
 
