--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ distlib = "==0.3.8"
 Django = "==5.1.1"
 django-cors-headers = "==4.4.0"
 djangorestframework = "==3.15.2"
+django-filter="==24.3" 
 filelock = "==3.16.1"
 packaging = "==24.1"
 pipenv = "==2024.0.3"
@@ -18,8 +19,9 @@ psycopg2-binary = "==2.9.9"
 setuptools = "==75.1.0"
 sqlparse = "==0.5.1"
 virtualenv = "==20.26.5"
+reportlab = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.12.3"
