--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DJANGO_SETTINGS_MODULE=settings.local
 
 #SERVER
 SERVICE_PORT=8083
-PROJECT_NAME=agendacultural
+PROJECT_NAME=nombre_proyecto
 RUN_LOAD_DATA=True
 
 #RABBIT MQ
@@ -16,8 +16,8 @@ CELERY_EAGER_PROPAGATES_EXCEPTIONS=True
 CELERY_TASK_ALWAYS_EAGER=True
 
 #DATABASE
-DB_USER=tmob
-DB_PASSWORD=changeme
+DB_USER=dbuser
+DB_PASSWORD=password
 DB_HOST=database
 DB_PORT=3307
 
@@ -25,19 +25,11 @@ DB_PORT=3307
 MEMCACHED_HOST=memcached
 MEMCACHED_PORT=11211
 
-#PRISMA DATA
-PRISMA_URL_DOMAIN=prisma_url
-
-ALARIS_URL_BASE=alaris_url
-ALARIS_AUTH_USER=alaris_user
-ALARIS_AUTH_PASSWORD=alaris_password
-
 #EMAIL SETTINGS
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_HOST_USER=email_user
 EMAIL_HOST_PASSWORD=email_host
-SENDER_MAILemail_sender
 
 #AWS CREDENTIALS
 AWS_ACCESS_KEY_ID=access_key
