--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.8.1
-Django==4.2.10
+certifi==2024.8.30
+chardet==5.2.0
+Django==5.1.1
+django-admin-rangefilter==0.8.3
 django-cors-headers==4.4.0
+git+https://github.com/philipn/django-rest-framework-filters.git
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.5.0
+filelock==3.16.1
+packaging==24.1
+pillow==11.1.0
 psycopg2-binary==2.9.9
+reportlab==4.2.5
+setuptools==75.1.0
 sqlparse==0.5.1
-django-filter==24.3
