--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,17 @@
-DJANGO_SETTINGS_MODULE=settings.local
-
-#SERVER
-SERVICE_PORT=8083
-PROJECT_NAME=nombre_proyecto
+PROJECT_NAME=nombre_del_proyecto
 RUN_LOAD_DATA=True
 
-#RABBIT MQ
-RABBIT_USER=guest
-RABBIT_PASSWORD=guest
-RABBIT_HOST=rabbitmq
+# Database
+POSTGRES_DB=nombre_db
+POSTGRES_USER=nombre_usuario
+POSTGRES_PASSWORD=contraseña_db
+DB_HOST=db
+DB_PORT=5432
 
-#celery
-C_FORCE_ROOT=true
-CELERY_EAGER_PROPAGATES_EXCEPTIONS=True
-CELERY_TASK_ALWAYS_EAGER=True
+# PgAdmin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin
 
-#DATABASE
-DB_USER=dbuser
-DB_PASSWORD=password
-DB_HOST=database
-DB_PORT=3307
-
-#MEMCACHED
-MEMCACHED_HOST=memcached
-MEMCACHED_PORT=11211
-
-#EMAIL SETTINGS
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=email_user
-EMAIL_HOST_PASSWORD=email_host
-
-#AWS CREDENTIALS
-AWS_ACCESS_KEY_ID=access_key
-AWS_SECRET_ACCESS_KEY=secret_key
-
-#REDIS
-REDIS_PORT=6379
-REDIS_HOST=redis
+# Email Settings
+EMAIL_HOST_USER=""
+EMAIL_HOST_PASSWORD=""
